<ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gal_viewflipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/navi" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/gal_navi"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navi_height"
            android:background="@color/navi" >

            <TextView
                android:id="@+id/gal_bckbtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/gal"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/gal_clsbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:background="@drawable/btn_back" />
        </RelativeLayout>

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <GridView
                android:id="@+id/gal_Gallery"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:horizontalSpacing="5dp"
                android:numColumns="3"
                android:padding="0dp"
                android:verticalSpacing="5dp"
                tools:listitem="@layout/inflate_galleryitem" >
            </GridView>

            <ImageView
                android:id="@+id/gal_imgNoMedia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                android:src="@drawable/feb_logo"
                android:visibility="gone" />
        </FrameLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/white" >

        <RelativeLayout
            android:id="@+id/vid_navitop"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navi_height"
            android:layout_alignParentTop="true"
            android:background="@color/navi" >

            <Button
                android:id="@+id/vid_backbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="12dp"
                android:background="@drawable/btn_back" />

            <TextView
                android:id="@+id/vid_bckbtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/feb"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/vid_donebtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:background="@drawable/btn_done" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/vid_ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/vid_navibtm"
            android:layout_below="@+id/vid_navitop"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/vid_one"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <ImageView
                    android:id="@+id/vid_ivmain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerVertical="true"
                    android:layout_margin="24dp"
                    android:background="@color/navi"
                    android:contentDescription="@null" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/vid_two"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/vid_tvcaption"
                    android:layout_width="match_parent"
                    android:layout_height="24dp"
                    android:layout_alignParentBottom="true"
                    android:gravity="center"
                    android:text="@string/capture"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@android:color/black" />

                <VideoView
                    android:id="@+id/vid_vvmain"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentRight="true"
                    android:layout_margin="24dp" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/vid_navibtm"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navi_height"
            android:layout_alignParentBottom="true"
            android:background="@color/navi" >

            <TextView
                android:id="@+id/vid_tvcap"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:gravity="center"
                android:text="@string/cap"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <ImageView
                android:id="@+id/vid_ivcap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="12dp"
                android:layout_toLeftOf="@+id/vid_tvcap"
                android:background="@drawable/btn_gallery"
                android:contentDescription="@null" />
        </RelativeLayout>
    </RelativeLayout>

</ViewFlipper>